// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdvertsPage with adverts > should render 1`] = `
<div>
  <header
    class="header"
  >
    <a
      class="logo"
      data-discover="true"
      href="/"
    >
      <img
        alt=""
        class="logoImg"
        src="/src/assets/logo-wallareact.svg"
      />
      <h1>
        WallaReact
      </h1>
    </a>
    <nav
      class="nav"
    >
      <a
        class="sc-hKDTPf bHRdEd"
        data-discover="true"
        href="/adverts/new"
      >
        Publish new advert
      </a>
      <button
        class="sc-bXdtCk hLLvTO"
      >
        Logout
      </button>
    </nav>
  </header>
  <main
    class="main"
  >
    <div>
      <div
        class="filter-form-container"
      >
        <form>
          <fieldset>
            <legend>
              Filter
            </legend>
            <label>
              Advert name
              <input
                name="name"
                type="text"
              />
            </label>
            <div>
              <label>
                <input
                  checked=""
                  name="sale"
                  type="radio"
                  value="all"
                />
                All
              </label>
              <label>
                <input
                  name="sale"
                  type="radio"
                  value="sell"
                />
                Sell
              </label>
              <label>
                <input
                  name="sale"
                  type="radio"
                  value="buy"
                />
                Buy
              </label>
            </div>
            <div>
              <button
                type="submit"
              >
                Apply filter
              </button>
              <button
                type="reset"
              >
                Clear filter
              </button>
            </div>
          </fieldset>
        </form>
      </div>
      <ul
        class="adverts-container"
      >
        <li>
          <a
            class="advert-container"
            data-discover="true"
            href="/adverts/idAdvert1"
          >
            <article
              class="advert hover"
            >
              <h2>
                testAdvert1
              </h2>
              <strong
                class="sell"
              >
                Sell
              </strong>
              <data
                value="5"
              >
                5,00 €
              </data>
              <ul
                aria-label="Tags"
                class="tags-container"
              >
                <li
                  class="tag"
                >
                  tag1
                </li>
              </ul>
            </article>
          </a>
        </li>
        <li>
          <a
            class="advert-container"
            data-discover="true"
            href="/adverts/dAdvert2"
          >
            <article
              class="advert hover"
            >
              <h2>
                testAdvert2
              </h2>
              <strong
                class="buy"
              >
                Buy
              </strong>
              <data
                value="500"
              >
                500,00 €
              </data>
              <ul
                aria-label="Tags"
                class="tags-container"
              >
                <li
                  class="tag"
                >
                  tag1
                </li>
                <li
                  class="tag"
                >
                  tag2
                </li>
              </ul>
            </article>
          </a>
        </li>
        <li>
          <a
            class="advert-container"
            data-discover="true"
            href="/adverts/dAdvert3"
          >
            <article
              class="advert hover"
            >
              <h2>
                testAdvert3
              </h2>
              <strong
                class="buy"
              >
                Buy
              </strong>
              <data
                value="1500"
              >
                1500,00 €
              </data>
              <ul
                aria-label="Tags"
                class="tags-container"
              >
                <li
                  class="tag"
                >
                  tag1
                </li>
                <li
                  class="tag"
                >
                  tag3
                </li>
              </ul>
            </article>
          </a>
        </li>
      </ul>
    </div>
  </main>
</div>
`;

exports[`AdvertsPage without adverts > should render 1`] = `
<div>
  <header
    class="header"
  >
    <a
      class="logo"
      data-discover="true"
      href="/"
    >
      <img
        alt=""
        class="logoImg"
        src="/src/assets/logo-wallareact.svg"
      />
      <h1>
        WallaReact
      </h1>
    </a>
    <nav
      class="nav"
    >
      <a
        class="sc-hKDTPf bHRdEd"
        data-discover="true"
        href="/adverts/new"
      >
        Publish new advert
      </a>
      <button
        class="sc-bXdtCk hLLvTO"
      >
        Logout
      </button>
    </nav>
  </header>
  <main
    class="main"
  >
    <div>
      <div
        class="filter-form-container"
      >
        <form>
          <fieldset>
            <legend>
              Filter
            </legend>
            <label>
              Advert name
              <input
                name="name"
                type="text"
              />
            </label>
            <div>
              <label>
                <input
                  checked=""
                  name="sale"
                  type="radio"
                  value="all"
                />
                All
              </label>
              <label>
                <input
                  name="sale"
                  type="radio"
                  value="sell"
                />
                Sell
              </label>
              <label>
                <input
                  name="sale"
                  type="radio"
                  value="buy"
                />
                Buy
              </label>
            </div>
            <div>
              <button
                type="submit"
              >
                Apply filter
              </button>
              <button
                type="reset"
              >
                Clear filter
              </button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        class="no-adverts-container"
      >
        <h2>
          There are no adverts published
        </h2>
        <div
          class="no-adverts-button-container"
        >
          <a
            class="sc-hKDTPf bHRdEd"
            data-discover="true"
            href="/adverts/new"
          >
            Publish new advert
          </a>
        </div>
      </div>
    </div>
  </main>
</div>
`;
